# thermo

./: .gitignore
ci/: README.md  mkvm_qemu.sh  mkvm_vbox.sh
ci/ansible/: inventory.txt  play.sh  site.yaml  ssh_config
ci/ansible/roles/android_sdk/tasks/: main.yaml
ci/ansible/roles/android_sdk/templates/: install_android_sdk.expect.j2
ci/ansible/roles/build_client/tasks/: main.yaml
ci/ansible/roles/build_client/templates/: local.properties.j2
ci/ansible/roles/build_fw/tasks/: main.yaml
ci/ansible/roles/zephyr/handlers/: main.yaml
client/android/: settings.gradle.kts
client/android/app/: build.gradle.kts
client/android/gradle/: libs.versions.toml
client/android/gradle/wrapper/: gradle-wrapper.properties
firm/: .gitignore  CMakeLists.txt  README.md  ide  prj.conf  zephyr.env
firm/boards/: nrf52dk_nrf52832.conf
firm/boards/arm/nrf52832_hello/: Kconfig.board  Kconfig.defconfig  nrf52832_hello.dts  nrf52832_hello.dtsi  nrf52832_hello_defconfig
firm/boards/arm/nrf52832_therm/: Kconfig  Kconfig.board  Kconfig.defconfig  Kconfig.nrf52832_therm  board.yml  nrf52832_therm.dts  nrf52832_therm.dtsi  nrf52832_therm_defconfig
firm/boards/shields/thermo/: Kconfig.shield  thermo.overlay
firm/src/: adc.c  adc.cpp  adc.h  adc.hpp  bt.c  bt.cpp  bt.h  bt.hpp  db.hpp  ex.hpp  main.c  main.cpp  thermo.c  thermo.cpp  thermo.h  thermo.hpp
firm/test/: CMakeLists.txt  README.md  prj.conf  testcase.yaml
firm/test/src/: test.cpp
hard/thermo/: fp-info-cache  thermo.kicad_pcb  thermo.kicad_prl  thermo.kicad_pro  thermo.kicad_sch
(+37 files in other folders)
